--- a/braket.html
+++ b/braket.html
@@ -17,10 +17,11 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 <style type="text/css">
-	.table td{vertical-align: middle;}
-	</style>
-
+	th{color:white }
+	th{background-color:#404040;}
+	.table tbody tr td{vertical-align: middle;}
 	
+	</style>
 </head>
 
 <body>
@@ -39,27 +40,61 @@
             <a class="nav-link" href="services.html">轮胎</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="braket.html">刹车片</a>
+            <a class="nav-link" href="#">刹车片</a>
           </li>
 		  <li class="nav-item">
             <a class="nav-link" href="#">皮带火花塞</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="about.html">关于我</a>
+            <a class="nav-link" href="#">关于我们</a>
           </li>
-           
-		</div>
-  
-	</nav>
+          <!--<li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Portfolio
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
+              <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
+              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
+              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Blog
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+              <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
+              <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
+              <a class="dropdown-item" href="blog-post.html">Blog Post</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Other Pages
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
+              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
+              <a class="dropdown-item" href="faq.html">FAQ</a>
+              <a class="dropdown-item" href="404.html">404</a>
+              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
+            </div>
+          </li>
+        </ul>-->
+      </div>
+    </div>
+  </nav>
 
- <div class="table-responsive-sm">
-<table class="table text-nowrap table-bordered table-sm">
+ <div class="table table-bordered">
+<table class="table text-nowrap">
 	<br>
-	<h1>2019年3月5日</h1>
-	<thead class="thead-dark">
+	<h1>2019年3月5日 </h1>
+	<thead>
 		<tr>
 			<th>车型</th>
-			<th>盘尺寸</th>
+			<th>刹车盘尺寸</th>
 			<th>名称</th>
 			<th>编码</th>
 			<th>ERP售价</th>
@@ -68,49 +103,13 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr class="table-secondary">
-			<td rowspan="4" ><b>SPA XC60 II</b></td>
-			<td>17"</td>
-			<td>前刹车片</td>
-			<td>31423652</td>
-			<td>1137</td>
-		<td style="color: #FF0000">常用</td>
-			<td>1137</td>
-			
-		</tr>
-		<tr class="table-secondary">
-		
-			<td>16"</td>
-			<td>后刹车片</td>
-			<td>31687502</td>
-			<td>986</td>
-			<td style="color: #FF0000">常用</td>
-			<td>879</td>
-		<tr class="table-secondary">
-			
-			<td>17"</td>
-			<td>前刹车片</td>
-			<td>31499906</td>
-			<td>1148</td>
-			<td>t8混动</td>
-			<td>1148</td>
-		</tr>
-		<tr class="table-secondary">
-			
-			<td>17"</td>
-			<td>后刹车片</td>
-			<td>32233035</td>
-			<td>929</td>
-			<td>t8混动</td>
-			<td>929</td>
-		</tr>
 		<tr>
-			<td rowspan="3" ><b>老款XC60</b></td>
+			<td rowspan="3" ><b>17款XC60</b></td>
 			<td></td>
 			<td>前刹车片</td>
 			<td>31685796</td>
 			<td>1064</td>
-			<td style="color: #FF0000">常用</td>
+			<td><font color="#ff0000">常用件</td>
 			<td>1064</td>
 		</tr>
 		<tr>
@@ -118,7 +117,7 @@
 			<td>后刹车片</td>
 			<td>31685796</td>
 			<td>781</td>
-			<td style="color: #FF0000">常用</td>
+			<td><font color="#ff0000">常用件</td>
 			<td>781</td>
 		</tr>
 		<tr>
@@ -129,34 +128,26 @@
 			<td>年份16年起及以后</td>
 			<td>1039</td>
 		</tr>
-		<tr class="table-secondary">
-			<td rowspan="4" ><b>S60-V60</b></td>
+		<tr>
+			<td rowspan="3" ><b>S60L-S60-V60</b></td>
 			<td>16"</td>
 			<td>前刹车片</td>
-			<td>30793941</td>
-			<td>1106</td>
-		<td style="color: #FF0000">常用</td>
-			<td>931</td>
+			<td>31434804/30793540/30793941</td>
+			<td>1092/931/1106</td>
+			<td><font color="#ff0000">常用件</td>
+			<td>929/931/931</td>
 			
 		</tr>
-		<tr class="table-secondary">
-		
-			<td>16"</td>
-			<td>前刹车片</td>
-			<td>31434804/30793540</td>
-			<td>1092/931</td>
-			<td style="color: #FF0000"></td>
-			<td>929/931</td>
-		<tr class="table-secondary">
+		<tr>
 			
 			<td></td>
 			<td>后刹车片</td>
 			<td>31317482</td>
 			<td>781</td>
-			<td style="color: #FF0000">常用</td>
+			<td><font color="#ff0000">常用件</td>
 			<td>781</td>
 		</tr>
-		<tr class="table-secondary">
+		<tr>
 			
 			<td>16.5"17.5"</td>
 			<td>前刹车片</td>
@@ -171,38 +162,38 @@
 			<td>前刹车片</td>
 			<td>31423652</td>
 			<td>1137</td>
-			<td style="color: #FF0000">常用</td>
+			<td><font color="#ff0000">常用件</td>
 			<td>1137</td>
 		</tr>
 		<tr>
 			
 			<td>16"</td>
-			<td>后刹车片</td>
 			<td>31687502</td>
+			<td>后刹车片</td>
 			<td>986</td>
-			<td style="color: #FF0000">t4常用</td>
+			<td><font color="#ff0000">T4常用</td>
 			<td>879</td>
 		</tr>
 		<tr>
 			
 			<td>17"</td>
-			<td>后刹车片</td>
 			<td>32233035</td>
+			<td>后刹车片</td>
 			<td>929</td>
-			<td style="color: #FF0000">t5常用</td>
+			<td><font color="#ff0000">T5常用</td>
 			<td>929</td>
 		</tr>
 		<tr>
 			
 			<td>18"</td>
-			<td>前刹车片</td>
 			<td>31499906</td>
+			<td>前刹车片</td>
 			<td>1148</td>
 			<td></td>
 			<td>1148</td>
 		</tr>
-		<tr class="table-secondary">
-			<td rowspan="2" ><b>SPA新XC90</b></td>
+		<tr>
+			<td rowspan="2" ><b>SPA XC90</b></td>
 			<td>18"19"</td>
 			<td>前刹车片</td>
 			<td>31499906</td>
@@ -210,7 +201,8 @@
 			<td></td>
 			<td>1148</td>
 		</tr>
-        <tr class="table-secondary">
+		<tr>
+			
 			<td>17"18"</td>
 			<td>后刹车片</td>
 			<td>32233035</td>
@@ -219,148 +211,515 @@
 			<td>929</td>
 		</tr>
 		<tr>
-			<td rowspan="3" ><b>老款XC90</b></td>
-			<td>17.5"</td>
-			<td>前刹车片</td>
-			<td>31262705</td>
-			<td>1349</td>
-			<td style="color: #FF0000">常用</td>
-			<td>1137</td>
-		</tr>
-        <tr>
-			<td></td>
-			<td>后刹车片</td>
-			<td>30793093</td>
-			<td>793</td>
-			<td style="color: #FF0000">常用</td>
-			<td>793</td>
+			<td>马牌</td>
+			<td>932344880</td>
+			<td>20555R16</td>
+			<td>94T XL VC6</td>
+			<td>null</td>
+			<td>532</td>
+			<td>马牌冬胎</td>
 		</tr>
 		<tr>
-		    <td>17"</td>
-			<td>前刹车片</td>
-			<td>31687104</td>
-			<td>1064</td>
-			<td style="color: #FF0000"></td>
-			<td>1064</td>
-		</tr>
-	 <tr class="table-secondary">
-			<td rowspan="2" ><b>C30 S40</b></td>
-			<td>15"16"</td>
-			<td>前刹车片</td>
-			<td>30742030</td>
-			<td>774</td>
+			<td>马牌</td>
+			<td>9430555</td>
+			<td>20560R16</td>
+			<td>92V TL FR ContiComfortContact CC5#</td>
+			<td>null</td>
+			<td>606</td>
 			<td></td>
-			<td>774</td>
-		</tr>
-        <tr class="table-secondary">
-			<td></td>
-			<td>后刹车片</td>
-			<td>30742031</td>
-			<td>731</td>
-			<td></td>
-			<td>731</td>
-		</tr>
-	    <tr>
-			<td rowspan="3" ><b>V40 V40CC</b></td>
-			<td>15"16"</td>
-			<td>前刹车片</td>
-			<td>31341301</td>
-			<td>894</td>
-			<td style="color: #FF0000">常用</td>
-			<td>929</td>
-		</tr>
-        <tr>
-			<td></td>
-			<td>后刹车片</td>
-			<td>31341327</td>
-			<td>742</td>
-			<td style="color: #FF0000">常用</td>
-			<td>735</td>
 		</tr>
 		<tr>
-		    <td>16.5"</td>
-			<td>前刹车片</td>
-			<td>30742029</td>
-			<td>883</td>
-			<td style="color: #FF0000"></td>
-			<td>883</td>
+			<td>马牌</td>
+			<td>932344881</td>
+			<td>20560R16</td>
+			<td>96T XL VC6</td>
+			<td>null</td>
+			<td>534</td>
+			<td>马牌冬胎</td>
 		</tr>
-	 <tr class="table-secondary">
-			<td rowspan="5" ><b>S80</b></td>
-			<td>16"</td>
-			<td>前刹车片</td>
-			<td>30793941</td>
-			<td>1106</td>
-		<td style="color: #FF0000">常用</td>
-			<td>931</td>
-			
+		<tr>
+			<td>马牌</td>
+			<td>9430557</td>
+			<td>21550R17</td>
+			<td>91V TL FR ContiMaxContact MC5##</td>
+			<td>868</td>
+			<td>868</td>
+			<td>马牌冬胎</td>
 		</tr>
-		<tr class="table-secondary">
+			<tr>
+			<td>米其林</td>
+			<td>9430504</td>
+			<td>21550R17</td>
+			<td>95W PRIMACY 3 ST</td>
+			<td>1061</td>
+			<td>1052</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>倍耐力</td>
+			<td>9430578</td>
+			<td>21550R17</td>
+			<td>95W XL P7cint</td>
+			<td>1088</td>
+			<td>1079</td>
+			<td>V60用过</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>932344948</td>
+			<td>21550R17</td>
+			<td>95T TL XL FR ContiVikingContact 6</td>
+			<td>null</td>
+			<td>879</td>
+			<td>马牌冬胎</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>9430556</td>
+			<td>21555R16</td>
+			<td>93W TL ContiPremiumContact 2 ##</td>
+			<td>806</td>
+			<td>799</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>9430505</td>
+			<td>21555R16</td>
+			<td>93W PRIMACY LC</td>
+			<td>null</td>
+			<td>1009</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>9430506</td>
+			<td>21555R16</td>
+			<td>97W PRIMACY 3 ST</td>
+			<td>1009</td>
+			<td>1009</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>31302193</td>
+			<td>21555R16</td>
+			<td>97W XL P7cint</td>
+			<td>1076</td>
+			<td>1067</td>
+			<td>S60L T3常用</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>932344882</td>
+			<td>21555R16</td>
+			<td>97T XL VC6</td>
+			<td>null</td>
+			<td>757</td>
+			<td>马牌冬胎</td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>9430751</td>
+			<td>21565R16</td>
+			<td>102H PRIMACY SUV</td>
+			<td>null</td>
+			<td>839</td>
+			<td>替代9430507</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>932344884</td>
+			<td>21565R16</td>
+			<td>1102T XL VC6 SUV</td>
+			<td>null</td>
+			<td>618</td>
+			<td>马牌冬胎</td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>9430758</td>
+			<td>22540ZR18</td>
+			<td>92W EL PILOT SPORT 3</td>
+			<td>null</td>
+			<td>1344</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>9430562</td>
+			<td>22545ZR17</td>
+			<td>91W TL FR ContiMaxContact MC5##</td>
+			<td>null</td>
+			<td>896</td>
+			<td>等待换代</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>31300661</td>
+			<td>22545R17</td>
+			<td>91V MC5</td>
+			<td>null</td>
+			<td>928</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>9430563</td>
+			<td>22545R17</td>
+			<td>91W TL FR ContiSportContact 5 SSR#</td>
+			<td>1151</td>
+			<td>1141</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>9430757</td>
+			<td>22545R17</td>
+			<td>94W EL PRIMACY 3 ST</td>
+			<td>1135</td>
+			<td>1125</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>31110339</td>
+			<td>22545R17</td>
+			<td>91W PRIMACY 3</td>
+			<td>1156</td>
+			<td>1146</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>倍耐力</td>
+			<td>9430571</td>
+			<td>22545R17</td>
+			<td>91W P7cint</td>
+			<td>null</td>
+			<td>1183</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>倍耐力</td>
+			<td>9430572</td>
+			<td>22545R17</td>
+			<td>91W P7cint(K1)</td>
+			<td>null</td>
+			<td>1543</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>31110348</td>
+			<td>22545R18</td>
+			<td>91W FR MAXC MC5 ##</td>
+			<td>null</td>
+			<td>1260</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>倍耐力</td>
+			<td>9430586</td>
+			<td>22545R18</td>
+			<td>95W XL P7cint</td>
+			<td>1556</td>
+			<td>1543</td>
+			<td>V40CC常用 替代31362267</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>932347141</td>
+			<td>22545R18</td>
+			<td>95T XL FR VC6</td>
+			<td>null</td>
+			<td>1543</td>
+			<td>马牌冬胎</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>9430560</td>
+			<td>22550R17</td>
+			<td>94W TL FR ContiSportContact 5 SSR#</td>
+			<td>1323</td>
+			<td>1312</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>9430567</td>
+			<td>22550R17</td>
+			<td>94V FR MAXC MC5 #</td>
+			<td>null</td>
+			<td>908</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>9430508</td>
+			<td>22550R17</td>
+			<td>98W PRIMACY 3 ST</td>
+			<td>1169</td>
+			<td>1159</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>倍耐力</td>
+			<td>31365482</td>
+			<td>22550R17</td>
+			<td>98W XL P7cint</td>
+			<td>1404</td>
+			<td>1392</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>31110395</td>
+			<td>22550ZR17</td>
+			<td>98Y EXTRA LOAD TL PILOT SPORT 4 ST MI</td>
+			<td>null</td>
+			<td>null</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>932344861</td>
+			<td>22550R17</td>
+			<td>98T TL XL FR ContiVikingContact 6</td>
+			<td>null</td>
+			<td>904</td>
+			<td>马牌冬胎</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>9430559</td>
+			<td>22555R16</td>
+			<td>95W TL ContiPremiumContact 2 ##</td>
+			<td>null</td>
+			<td>993</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>9430511</td>
+			<td>22555R16</td>
+			<td>99W PRIMACY 3 ST</td>
+			<td>null</td>
+			<td>1218</td>
+			<td>替代9430510</td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>921632459</td>
+			<td>22555R16</td>
+			<td>95Y PILOT PRECEDE</td>
+			<td>1248</td>
+			<td>1238</td>
+			<td>替代9430510</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>932344594</td>
+			<td>22555R16</td>
+			<td>99T XL VC6</td>
+			<td>null</td>
+			<td>860</td>
+			<td>马牌冬胎</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>31434501</td>
+			<td>225/55R17</td>
+			<td>97V UC6 Vol</td>
+			<td>1046</td>
+			<td>1037</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>31110392</td>
+			<td>225/55R17</td>
+			<td>101W PRIMACY 3 ST</td>
+			<td>null</td>
+			<td>1277</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>31362842</td>
+			<td>22555R17</td>
+			<td>97V TL PRIMACY 3 VOL GRNX MI</td>
+			<td>null</td>
+			<td>1277</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>932344862</td>
+			<td>22555R17</td>
+			<td>97T TL ContiVikingContact 6</td>
+			<td>null</td>
+			<td>906</td>
+			<td>马牌冬胎</td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>9430558</td>
+			<td>23540ZR18</td>
+			<td>95Y TL XL FR ContiMaxContact MC5#</td>
+			<td>1094</td>
+			<td>1085</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>31110340</td>
+			<td>23540ZR18</td>
+			<td>95Y PILOT SPORT 4</td>
+			<td>null</td>
+			<td>1378</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>31110341</td>
+			<td>23540ZR18</td>
+			<td>95Y PILOT SPORT 3</td>
+			<td>1360</td>
+			<td>1360</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>932344936</td>
+			<td>23540ZR18</td>
+			<td>95Y PILOT SPORT 3</td>
+			<td>null</td>
+			<td>1282</td>
+			<td>马牌冬胎</td>
+		</tr>
+		<tr>
+			<td>普利斯通</td>
+			<td>9430598</td>
+			<td>23540R19</td>
+			<td>96W XL S001</td>
+			<td>2727</td>
+			<td>2704</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>31110345</td>
+			<td>23540R19</td>
+			<td>96W XL FR SC5</td>
+			<td>null</td>
+			<td>1834</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>倍耐力</td>
+			<td>9430580</td>
+			<td>23540ZR19</td>
+			<td>(92Y) P ZERO(N0)</td>
+			<td>null</td>
+			<td>3782</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>9430544</td>
+			<td>23545ZR17</td>
+			<td>97W XL FR MC5</td>
+			<td>1059</td>
+			<td>1050</td>
+			<td>替代9430550</td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>9430512</td>
+			<td>23545R17</td>
+			<td>97W PRIMACY 3 ST</td>
+			<td>1272</td>
+			<td>1261</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>9430759</td>
+			<td>23545ZR17</td>
+			<td>PILOT SPORT 4</td>
+			<td>null</td>
+			<td>1434</td>
+			<td>可能停产</td>
+		</tr>
+		<tr>
+			<td>米其林</td>
+			<td>9430513</td>
+			<td>23545ZR17</td>
+			<td>PILOT SPORT 4</td>
+			<td>1295</td>
+			<td>1284</td>
+			<td>如停产，订9430759</td>
+		</tr>
+		<tr>
+			<td>倍耐力</td>
+			<td>31365222</td>
+			<td>23545R17</td>
+			<td>97W XL P7cint </td>
+			<td>1229</td>
+			<td>1218</td>
+			<td>S60L T5常用</td>
+		</tr>
+		<tr>
+			<td>倍耐力</td>
+			<td>9430579</td>
+			<td>23545R17</td>
+			<td>97W XL P7cint</td>
+			<td>null</td>
+			<td>1154</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>932344785</td>
+			<td>23545R17</td>
+			<td>97T XL FR VC6</td>
+			<td>null</td>
+			<td>1078</td>
+			<td>马牌冬胎</td>
+		</tr>
+		<tr>
+			<td>倍耐力</td>
+			<td>31341549</td>
+			<td>23545R18</td>
+			<td>98Y XL P7cint</td>
+			<td>1661</td>
+			<td>1647</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>倍耐力</td>
+			<td>31400929</td>
+			<td>23545R18</td>
+			<td>98Y XL P7cint</td>
+			<td>1638</td>
+			<td>1624</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>马牌</td>
+			<td>932344915</td>
+			<td>23545R18</td>
+			<td>94T FR VC6</td>
+			<td>null</td>
+			<td>1341</td>
+			<td>马牌冬胎</td>
+		</tr>
 		
-			<td>16"</td>
-			<td>前刹车片</td>
-			<td>31304129</td>
-			<td>931</td>
-			<td style="color: #FF0000"></td>
-			<td>931</td>
-		<tr class="table-secondary">
-			
-			<td></td>
-			<td>后刹车片</td>
-			<td>31329430/31445796</td>
-			<td>781</td>
-			<td style="color: #FF0000">常用</td>
-			<td>781</td>
-		</tr>
-		<tr class="table-secondary">
-			
-			<td>16.5"17.5"</td>
-			<td>前刹车片</td>
-			<td>30793539</td>
-			<td>1234</td>
-			<td>6缸机很少用</td>
-			<td>1039</td>
-		</tr>
-		<tr class="table-secondary">
-			
-			<td></td>
-			<td>后刹车片</td>
-			<td>30671576</td>
-			<td>1013</td>
-			<td>机械手刹很少用</td>
-			<td>781</td>
-		</tr>
-		<tr>
-			<td rowspan="3" ><b>XC40</b></td>
-			<td>17"</td>
-			<td>前刹车片</td>
-			<td>31471408</td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-        <tr>
-			<td>16"</td>
-			<td>前刹车片</td>
-			<td>31471410</td>
-			<td>1199</td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>16"</td>
-			<td>后刹车片</td>
-			<td>31471471</td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
 	</tbody>
-	
 </table>
 </div>
 
-  <footer class="py-5 bg-dark">
+  <footer class="col-md-12; py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
